--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
+<h1 align="center"><i>Hi there! My name is Dmitriy)✌️</i></h1>
+<h2 align="center"><i>I am an IT specialist from Russia 🇷🇺</i></h2>
+
+
+
+💻 <i>If you take a look at my repositories, you can find many different instructions that I think you will like) I try to work with all Linux and Windows operating systems including server versions and put everything only the most necessary on <a href="https://github.com">GitHub.com</a><i/>
+
+<h4><i>I am also certified in:</i></h4>
+
+&#8226;  <i>CCNA Security<i/><br/>
+
+&#8226;  <i>CCNA Routing and Switching: Routing and Switching Essentials<i/><br/>
+
+&#8226;  <i>CCNA Routing and Switching: Introduction to Networks<i/><br/>
+
+&#8226;  <i>I am also an expert in evaluating demonstration exams in Network and System Administration<i/><br/>
+
+&#8226;  <i>Certified specialist of the Russian operating system Linux RedOS<i/><br/>
+
+<h4> <i>At the moment, all my work instructions can be found in the following repositories:</i></h4>
+
+<i>&#8226; <a href="https://github.com/dimoroz772/Domain_connection_between_Linux_and_Windows">Domain_connection_between_Linux_and_Windows</a><br/><i/>
+
+<i>&#8226; <a href="https://github.com/dimoroz772/Linux_RedOS">Linux_RedOS</a><br/><i/>
+
+<i>&#8226; <a href="https://github.com/dimoroz772/Linux_CentOS">Linux_CentOS</a><br/><i/>
+
+<i>&#8226; <a href="https://github.com/dimoroz772/Linux_ALT">Linux_ALT</a><br/><i/>
+
+<i>&#8226; <a href="https://github.com/dimoroz772/Linux_Fedora">Linux_Fedora</a><br/><i/>
+
+<i>&#8226; <a href="https://github.com/dimoroz772/Scripts">Scripts</a><br/><i/>
+
+<i>&#8226; <a href="https://dimoroz772.github.io/Windows_Upgrade_Or_Install_Keys/">Windows_Upgrade_Or_Install_Keys</a><br/><i/>
+
+<i>&#8226; <a href="https://github.com/dimoroz772/DDT4ALL">DDT4ALL</a><br/><i/>
+
+<i>&#8226; <a href="https://github.com/dimoroz772/My_ideal_software_IT-environment">My_ideal_software_IT-environment</a><br/><i/>
+ <br/>
+<i>I hope that you will find something new and interesting for yourself in the repositories of my profile) Peaceful sky to all!)<i/>
+ <br/>
+ <br/>
+
+<p align="center">
+<a href="https://git.io/streak-stats"><img src="https://streak-stats.demolab.com?user=dimoroz772&theme=tokyonight-duo&hide_border=true"/></a>
+</p>
+
+ <br/>
+ <br/>
+
+<p align="left">
+<a href="https://git.io/streak-stats"><img src="https://komarev.com/ghpvc/?username=dimoroz772&color=blueviolet"/></a>
+</p>
 
