--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<style>
+body{
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+}
+</style>
+
+
 <h1 align="center"><i>Hi there! My name is Dmitriy)✌️</i></h1>
 <h2 align="center"><i>I am an IT specialist from Russia 🇷🇺</i></h2>
 
