--- a/index.html
+++ b/index.html
@@ -3,7 +3,37 @@ body{
     max-width: 1000px;
     margin: 0 auto;
     padding: 20px;
+    font-family: Arial, sans-serif;
+    color: #333;
 }
+h1 {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  p {
+    margin-bottom: 20px;
+  }
+  p {
+    margin-bottom: 20px;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 10px;
+  }
+  blockquote {
+    background-color: #f3f3f3;
+    border-left: 3px solid #ccc;
+    padding: 10px;
+    margin: 10px 0;
+  }
+  a {
+    color: #007bff;
+  }
+  a:hover {
+    text-decoration: underline;
+  }
+  img {
+    display: block;
+    margin: 0 auto;
+  }
 </style>
 
 
