--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@ body{
     padding: 20px;
     color: #333;
 }
+html{
+background-image: url(../fon.jpg);
+background-repeat: no-repeat;
+background-position: center center;
+background-attachment: fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+}
 </style>
 
 
