--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <style>
 body{
+    background-image: url('fon.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
     max-width: 1000px;
     margin: 0 auto;
     padding: 20px;
