--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body{
  <br/>
 
 <p align="center">
-<a href="https://git.io/streak-stats"><img src="https://streak-stats.demolab.com?user=dimoroz772&theme=tokyonight-duo&hide_border=true"/></a>
+<a href="https://git.io/streak-stats"><img src="https://streak-stats.demolab.com?user=dimoroz772&theme=midnight-purple&hide_border=true"/></a>
 </p>
 
 
