--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ a {
 
 <i>&#8226; <a href="https://github.com/dimoroz772/Scripts">Scripts</a><br/><i/>
 
-<i>&#8226; <a href="https://dimoroz772.github.io/Windows_Upgrade_Or_Install_Keys/">Windows_Upgrade_Or_Install_Keys</a><br/><i/>
+<i>&#8226; <a href="https://dimoroz772.github.io/Windows_Upgrade_Or_Install_Keys/index.html">Windows_Upgrade_Or_Install_Keys</a><br/><i/>
 
 <i>&#8226; <a href="https://github.com/dimoroz772/DDT4ALL">DDT4ALL</a><br/><i/>
 
