--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@ a {
     text-decoration: none;
 }
 </style>
+<style>
+    button {
+    position: static;
+    border: 1px solid #808080;
+    font-size: 18px;
+    background-color: rgba(28,28,28,0);
+    transition: 0.5s;
+    }
+    button:hover {
+    background-color: #ff0000;
+    }
+</style>
 
 
 <h1 align="center"><i>Hi there! My name is Dmitriy)✌️</i></h1>
@@ -35,7 +47,7 @@ a {
 
 <h4> <i>At the moment, all my work instructions can be found in the following repositories:</i></h4>
 
-<i>&#8226; <a href="https://github.com/dimoroz772/Domain_connection_between_Linux_and_Windows">Domain_connection_between_Linux_and_Windows</a><br/><i/>
+<button><i>&#8226; <a href="https://github.com/dimoroz772/Domain_connection_between_Linux_and_Windows">Domain_connection_between_Linux_and_Windows</a><br/><i/></button>
 
 <i>&#8226; <a href="https://github.com/dimoroz772/Linux_RedOS">Linux_RedOS</a><br/><i/>
 
