--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ a {
     transition: 0.5s;
     }
     button:hover {
-    background-color: #ff0000;
+    background-color: #0095ff;
     }
 </style>
 
