--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@ a {
 <style>
     button {
     position: static;
-    border: 2px solid #000000;
     font-size: 18px;
     background-color: rgba(28,28,28,0);
     transition: 0.5s;
     }
     button:hover {
-    background-color: #6b00d6;
+    background-color: #00a6ff;
+    border: 2px solid #000000;
     }
 </style>
 
@@ -47,7 +47,7 @@ a {
 
 <h4> <i>At the moment, all my work instructions can be found in the following repositories:</i></h4>
 
-<button><i><a href="https://github.com/dimoroz772/Domain_connection_between_Linux_and_Windows">Domain_connection_between_Linux_and_Windows</a><br/><i/></button>
+<button><i><a href="https://github.com/dimoroz772/Domain_connection_between_Linux_and_Windows" style="color:#6b00d6">Domain_connection_between_Linux_and_Windows</a><br/><i/></button>
 
 <i>&#8226; <a href="https://github.com/dimoroz772/Linux_RedOS">Linux_RedOS</a><br/><i/>
 
