--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@ a {
 
 <h4> <i>At the moment, all my work instructions can be found in the following repositories:</i></h4>
 
-<button><i>&#8226; <a href="https://github.com/dimoroz772/Domain_connection_between_Linux_and_Windows" style="color:#6b00d6">Domain_connection_between_Linux_and_Windows</a><br/><i/></button>
+<button><i>&#8226; <a href="https://github.com/dimoroz772/Domain_connection_between_Linux_and_Windows" style="color:#6b00d6">Domain_connection_between_Linux_and_Windows</a><br/><i/></button><br/>
 
-<i>&#8226; <a href="https://github.com/dimoroz772/Linux_RedOS">Linux_RedOS</a><br/><i/>
+<button><i>&#8226; <a href="https://github.com/dimoroz772/Linux_RedOS" style="color:#6b00d6">Linux_RedOS</a><br/><i/></button><br/>
 
-<i>&#8226; <a href="https://github.com/dimoroz772/Linux_CentOS">Linux_CentOS</a><br/><i/>
+<button><i>&#8226; <a href="https://github.com/dimoroz772/Linux_CentOS" style="color:#6b00d6">Linux_CentOS</a><br/><i/></button><br/>
 
 <i>&#8226; <a href="https://github.com/dimoroz772/Linux_ALT">Linux_ALT</a><br/><i/>
 
