--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@ a {
 
 <button><i>&#8226; <a href="https://github.com/dimoroz772/Linux_CentOS" style="color:#6b00d6">Linux_CentOS</a><br/><i/></button><br/>
 
-<i>&#8226; <a href="https://github.com/dimoroz772/Linux_ALT">Linux_ALT</a><br/><i/>
+<button><i>&#8226; <a href="https://github.com/dimoroz772/Linux_ALT" style="color:#6b00d6">Linux_ALT</a><br/><i/></button><br/>
 
-<i>&#8226; <a href="https://github.com/dimoroz772/Linux_Fedora">Linux_Fedora</a><br/><i/>
+<button><i>&#8226; <a href="https://github.com/dimoroz772/Linux_Fedora" style="color:#6b00d6">Linux_Fedora</a><br/><i/></button><br/>
 
-<i>&#8226; <a href="https://github.com/dimoroz772/Scripts">Scripts</a><br/><i/>
+<button><i>&#8226; <a href="https://github.com/dimoroz772/Scripts" style="color:#6b00d6">Scripts</a><br/><i/></button><br/>
 
-<i>&#8226; <a href="https://dimoroz772.github.io/Windows_Upgrade_Or_Install_Keys/index.html">Windows_Upgrade_Or_Install_Keys</a><br/><i/>
+<button><i>&#8226; <a href="https://dimoroz772.github.io/Windows_Upgrade_Or_Install_Keys/index.html" style="color:#6b00d6">Windows_Upgrade_Or_Install_Keys</a><br/><i/></button><br/>
 
-<i>&#8226; <a href="https://github.com/dimoroz772/DDT4ALL">DDT4ALL</a><br/><i/>
+<button><i>&#8226; <a href="https://github.com/dimoroz772/DDT4ALL" style="color:#6b00d6">DDT4ALL</a><br/><i/></button><br/>
 
-<i>&#8226; <a href="https://github.com/dimoroz772/My_ideal_software_IT-environment">My_ideal_software_IT-environment</a><br/><i/>
+<button><i>&#8226; <a href="https://github.com/dimoroz772/My_ideal_software_IT-environment" style="color:#6b00d6">My_ideal_software_IT-environment</a><br/><i/></button><br/>
  <br/>
 <i>I hope that you will find something new and interesting for yourself in the repositories of my profile) Peaceful sky to all!)<i/>
  <br/>
