--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@ a {
 <style>
     button {
     position: static;
+    width:500px;
+    text-align:left;
     font-size: 18px;
     background-color: rgba(28,28,28,0);
     transition: 0.5s;
