--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ a {
 
 <button><i>&#8226; <a href="https://dimoroz772.github.io/Windows_Upgrade_Or_Install_Keys/index.html" style="color:#000000">Windows_Upgrade_Or_Install_Keys</a><br/><i/></button><br/>
 
-<button><i>&#8226; <a href="https://github.com/dimoroz772/DDT4ALL" style="color:#000000">DDT4ALL</a><br/><i/></button><br/>
+<button><i>&#8226; <a href="https://dimoroz772.github.io/DDT4ALL/index.html" style="color:#000000">DDT4ALL</a><br/><i/></button><br/>
 
 <button><i>&#8226; <a href="https://github.com/dimoroz772/My_ideal_software_IT-environment" style="color:#000000">My_ideal_software_IT-environment</a><br/><i/></button><br/>
  <br/>
