--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<head>
+  <title>About Dmitriy Morozov</title>
+  <link rel="shortcut icon" href="./Resum.png" type="image/png">
+</head>
 <style>
 body{
     background-image: url('fon.jpg');
