--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ a {
 
 <button><i>&#8226; <a href="https://github.com/dimoroz772/Linux_Fedora" style="color:#000000">Linux_Fedora</a><br/><i/></button><br/>
 
-<button><i>&#8226; <a href="https://github.com/dimoroz772/Scripts" style="color:#000000">Scripts</a><br/><i/></button><br/>
+<button><i>&#8226; <a href="https://dimoroz772.github.io/Scripts/index.html" style="color:#000000">Scripts</a><br/><i/></button><br/>
 
 <button><i>&#8226; <a href="https://dimoroz772.github.io/Windows_Upgrade_Or_Install_Keys/index.html" style="color:#000000">Windows_Upgrade_Or_Install_Keys</a><br/><i/></button><br/>
 
