--- a/index.html
+++ b/index.html
@@ -42,45 +42,47 @@ a {
 
 <h4><i>I am also certified in:</i></h4>
 
-&#8226;  <i>CCNA Security<i/><br/>
+<i>&#8226; <a href="https://img.hhcdn.ru/photo/623529866.jpeg?t=1693971457&h=SPNFbmoXDDWKM755IkyIJw">CCNA Security</a><i/><br/>
 
-&#8226;  <i>CCNA Routing and Switching: Routing and Switching Essentials<i/><br/>
+<i>&#8226; <a href="https://img.hhcdn.ru/photo/623529994.jpeg?t=1693971457&h=SXXZsoWJ_aljwCpyaSf2DA">CCNA Routing and Switching: Routing and Switching Essentials</a><i/><br/>
 
-&#8226;  <i>CCNA Routing and Switching: Introduction to Networks<i/><br/>
+<i>&#8226; <a href="https://img.hhcdn.ru/photo/623530162.jpeg?t=1693971457&h=aSd3HFMwMSJkXAVxqp6Rbw">CCNA Routing and Switching: Introduction to Networks</a><i/><br/>
 
-&#8226;  <i>I am also an expert in evaluating demonstration exams in Network and System Administration<i/><br/>
+<i>&#8226; <a href="https://img.hhcdn.ru/photo/652564360.jpeg?t=1693971457&h=lHzghlv5fuSqKroGncF1ew">I am also an expert in evaluating demonstration exams in Network and System Administration</a><i/><br/>
 
-&#8226;  <i>Certified specialist of the Russian operating system Linux RedOS<i/><br/>
+<i>&#8226; <a href="https://img.hhcdn.ru/photo/653575075.jpeg?t=1693971457&h=alYTFO__1l0fzOyPsdrJCg">Certified specialist of the Russian operating system Linux RedOS</a><i/><br/>
 
 <h4> <i>At the moment, all my work instructions can be found in the following repositories:</i></h4>
 
-<button><i>&#8226; <a href="https://github.com/dimoroz772/Domain_connection_between_Linux_and_Windows" style="color:#000000">Domain_connection_between_Linux_and_Windows</a><br/><i/></button><br/>
+<i>&#8226; <a href="https://github.com/dimoroz772/Domain_connection_between_Linux_and_Windows">Domain_connection_between_Linux_and_Windows</a><br/><i/>
 
-<button><i>&#8226; <a href="https://github.com/dimoroz772/Linux_RedOS" style="color:#000000">Linux_RedOS</a><br/><i/></button><br/>
+<i>&#8226; <a href="https://github.com/dimoroz772/Linux_RedOS">Linux_RedOS</a><br/><i/>
 
-<button><i>&#8226; <a href="https://github.com/dimoroz772/Linux_CentOS" style="color:#000000">Linux_CentOS</a><br/><i/></button><br/>
+<i>&#8226; <a href="https://github.com/dimoroz772/Linux_CentOS">Linux_CentOS</a><br/><i/>
 
-<button><i>&#8226; <a href="https://github.com/dimoroz772/Linux_ALT" style="color:#000000">Linux_ALT</a><br/><i/></button><br/>
+<i>&#8226; <a href="https://github.com/dimoroz772/Linux_ALT">Linux_ALT</a><br/><i/>
 
-<button><i>&#8226; <a href="https://github.com/dimoroz772/Linux_Fedora" style="color:#000000">Linux_Fedora</a><br/><i/></button><br/>
+<i>&#8226; <a href="https://github.com/dimoroz772/Linux_Fedora">Linux_Fedora</a><br/><i/>
 
-<button><i>&#8226; <a href="https://dimoroz772.github.io/Scripts/index.html" style="color:#000000">Scripts</a><br/><i/></button><br/>
+<i>&#8226; <a href="https://github.com/dimoroz772/Scripts">Scripts</a><br/><i/>
 
-<button><i>&#8226; <a href="https://dimoroz772.github.io/Windows_Upgrade_Or_Install_Keys/index.html" style="color:#000000">Windows_Upgrade_Or_Install_Keys</a><br/><i/></button><br/>
+<i>&#8226; <a href="https://github.com/dimoroz772/Windows_Upgrade_Or_Install_Keys">Windows_Upgrade_Or_Install_Keys</a><br/><i/>
 
-<button><i>&#8226; <a href="https://dimoroz772.github.io/DDT4ALL/index.html" style="color:#000000">DDT4ALL</a><br/><i/></button><br/>
+<i>&#8226; <a href="https://github.com/dimoroz772/DDT4ALL">DDT4ALL</a><br/><i/>
 
-<button><i>&#8226; <a href="https://github.com/dimoroz772/My_ideal_software_IT-environment" style="color:#000000">My_ideal_software_IT-environment</a><br/><i/></button><br/>
+<i>&#8226; <a href="https://github.com/dimoroz772/My_ideal_software_IT-environment">My_ideal_software_IT-environment</a><br/><i/>
  <br/>
 <i>I hope that you will find something new and interesting for yourself in the repositories of my profile) Peaceful sky to all!)<i/>
  <br/>
+ <br/>
 
 <p align="center">
-<a href="https://git.io/streak-stats"><img src="https://streak-stats.demolab.com?user=dimoroz772&theme=transparent&hide_border=true"/></a>
+<a href="https://git.io/streak-stats"><img src="https://streak-stats.demolab.com?user=dimoroz772&theme=tokyonight-duo&hide_border=true"/></a>
 </p>
 
+ <br/>
+ <br/>
 
 <p align="left">
 <a href="https://git.io/streak-stats"><img src="https://komarev.com/ghpvc/?username=dimoroz772&color=blueviolet"/></a>
 </p>
-
