--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@ a {
 
 <h4><i>I am also certified in:</i></h4>
 
-<i>&#8226; <a href="https://img.hhcdn.ru/photo/623529866.jpeg?t=1693971457&h=SPNFbmoXDDWKM755IkyIJw">CCNA Security</a><i/><br/> 
+<i>&#8226; <a>CCNA Security</a><i/><br/> 
 
-<i>&#8226; <a href="https://img.hhcdn.ru/photo/623529994.jpeg?t=1693971457&h=SXXZsoWJ_aljwCpyaSf2DA">CCNA Routing and Switching: Routing and Switching Essentials</a><i/><br/>
+<i>&#8226; <a>CCNA Routing and Switching: Routing and Switching Essentials</a><i/><br/>
 
-<i>&#8226; <a href="https://img.hhcdn.ru/photo/623530162.jpeg?t=1693971457&h=aSd3HFMwMSJkXAVxqp6Rbw">CCNA Routing and Switching: Introduction to Networks</a><i/><br/>
+<i>&#8226; <a>CCNA Routing and Switching: Introduction to Networks</a><i/><br/>
 
-<i>&#8226; <a href="https://img.hhcdn.ru/photo/652564360.jpeg?t=1693971457&h=lHzghlv5fuSqKroGncF1ew">I am also an expert in evaluating demonstration exams in Network and System Administration</a><i/><br/>
+<i>&#8226; <a>I am also an expert in evaluating demonstration exams in Network and System Administration</a><i/><br/>
 
-<i>&#8226; <a href="https://img.hhcdn.ru/photo/653575075.jpeg?t=1693971457&h=alYTFO__1l0fzOyPsdrJCg">Certified specialist of the Russian operating system Linux RedOS</a><i/><br/>
+<i>&#8226; <a>Certified specialist of the Russian operating system Linux RedOS</a><i/><br/>
 
 <h4> <i>At the moment, all my work instructions can be found in the following repositories:</i></h4>
 
