--- a/index.html
+++ b/index.html
@@ -1,36 +1,37 @@
 <head>
-  <title>About Dmitriy Morozov</title>
-  <link rel="shortcut icon" href="./Resum.png" type="image/png">
-</head>
-<style>
-body{
-    background-image: url('fon.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 20px;
-    color: #333;
-}
-a {
-    text-decoration: none;
-}
-</style>
-<style>
-    button {
-    position: static;
-    width:450px;
-    text-align:left;
-    font-size: 18px;
-    background-color: rgba(28,28,28,0);
-    transition: 0.5s;
-    }
-    button:hover {
-    background-color: #00a6ff;
-    border: 2px solid #540094;
-    }
-</style>
+    <title>About Dmitriy Morozov</title>
+    <link rel="shortcut icon" href="./Resum.png" type="image/png">
+  </head>
+  <style>
+  body{
+      background-image: url('fon.jpg');
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-attachment: fixed;
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 20px;
+      color: #333;
+  }
+  a {
+      text-decoration: none;
+  }
+  </style>
+  <style>
+      button {
+      position: static;
+      width:450px;
+      text-align:left;
+      font-size: 18px;
+      background-color: rgba(28,28,28,0);
+      transition: 0.5s;
+      }
+      button:hover {
+      background-color: #00a6ff;
+      border: 2px solid #540094;
+      }
+  </style>
+  
 
 
 <h1 align="center"><i>Hi there! My name is Dmitriy)✌️</i></h1>
@@ -42,15 +43,15 @@ a {
 
 <h4><i>I am also certified in:</i></h4>
 
-<i>&#8226; <a>CCNA Security</a><i/><br/> 
+<i>&#8226; <a href="https://img.hhcdn.ru/photo/623529866.jpeg?t=1693971457&h=SPNFbmoXDDWKM755IkyIJw">CCNA Security</a><i/><br/>
 
-<i>&#8226; <a>CCNA Routing and Switching: Routing and Switching Essentials</a><i/><br/>
+<i>&#8226; <a href="https://img.hhcdn.ru/photo/623529994.jpeg?t=1693971457&h=SXXZsoWJ_aljwCpyaSf2DA">CCNA Routing and Switching: Routing and Switching Essentials</a><i/><br/>
 
-<i>&#8226; <a>CCNA Routing and Switching: Introduction to Networks</a><i/><br/>
+<i>&#8226; <a href="https://img.hhcdn.ru/photo/623530162.jpeg?t=1693971457&h=aSd3HFMwMSJkXAVxqp6Rbw">CCNA Routing and Switching: Introduction to Networks</a><i/><br/>
 
-<i>&#8226; <a>I am also an expert in evaluating demonstration exams in Network and System Administration</a><i/><br/>
+<i>&#8226; <a href="https://img.hhcdn.ru/photo/652564360.jpeg?t=1693971457&h=lHzghlv5fuSqKroGncF1ew">I am also an expert in evaluating demonstration exams in Network and System Administration</a><i/><br/>
 
-<i>&#8226; <a>Certified specialist of the Russian operating system Linux RedOS</a><i/><br/>
+<i>&#8226; <a href="https://img.hhcdn.ru/photo/653575075.jpeg?t=1693971457&h=alYTFO__1l0fzOyPsdrJCg">Certified specialist of the Russian operating system Linux RedOS</a><i/><br/>
 
 <h4> <i>At the moment, all my work instructions can be found in the following repositories:</i></h4>
 
