--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <head>
- <title>About Dmitriy Morozov</title>
- <link rel="shortcut icon" href="./Resum.png" type="image/png">
+    <title>About Dmitriy Morozov</title>
+    <link rel="shortcut icon" href="./Resum.png" type="image/png">
 </head>
 <style>
- body{
+  body{
       background-image: url('fon.jpg');
       background-repeat: no-repeat;
       background-size: cover;
@@ -12,24 +12,24 @@
       margin: 0 auto;
       padding: 20px;
       color: #333;
- }
- a {
+  }
+  a {
       text-decoration: none;
- }
+  }
 </style>
 <style>
- button {
+    button {
       position: static;
       width:450px;
       text-align:left;
       font-size: 18px;
       background-color: rgba(28,28,28,0);
       transition: 0.5s;
- }
- button:hover {
+    }
+    button:hover {
       background-color: #00a6ff;
       border: 2px solid #540094;
- }
+    }
 </style>
   
 
@@ -43,35 +43,35 @@
 
 <h4><i>I am also certified in:</i></h4>
 
-<i>&#8226; <a href="https://img.hhcdn.ru/photo/623529866.jpeg?t=1693971457&h=SPNFbmoXDDWKM755IkyIJw">CCNA Security</a><i/><br/>
+<button><i>&#8226; <a href="https://img.hhcdn.ru/photo/623529866.jpeg?t=1693971457&h=SPNFbmoXDDWKM755IkyIJw">CCNA Security</a><i/></button><br/>
 
-<i>&#8226; <a href="https://img.hhcdn.ru/photo/623529994.jpeg?t=1693971457&h=SXXZsoWJ_aljwCpyaSf2DA">CCNA Routing and Switching: Routing and Switching Essentials</a><i/><br/>
+<button><i>&#8226; <a href="https://img.hhcdn.ru/photo/623529994.jpeg?t=1693971457&h=SXXZsoWJ_aljwCpyaSf2DA">CCNA Routing and Switching: Routing and Switching Essentials</a><i/></button><br/>
 
-<i>&#8226; <a href="https://img.hhcdn.ru/photo/623530162.jpeg?t=1693971457&h=aSd3HFMwMSJkXAVxqp6Rbw">CCNA Routing and Switching: Introduction to Networks</a><i/><br/>
+<button><i>&#8226; <a href="https://img.hhcdn.ru/photo/623530162.jpeg?t=1693971457&h=aSd3HFMwMSJkXAVxqp6Rbw">CCNA Routing and Switching: Introduction to Networks</a><i/></button><br/>
 
-<i>&#8226; <a href="https://img.hhcdn.ru/photo/652564360.jpeg?t=1693971457&h=lHzghlv5fuSqKroGncF1ew">I am also an expert in evaluating demonstration exams in Network and System Administration</a><i/><br/>
+<button><i>&#8226; <a href="https://img.hhcdn.ru/photo/652564360.jpeg?t=1693971457&h=lHzghlv5fuSqKroGncF1ew">I am also an expert in evaluating demonstration exams in Network and System Administration</a><i/></button><br/>
 
-<i>&#8226; <a href="https://img.hhcdn.ru/photo/653575075.jpeg?t=1693971457&h=alYTFO__1l0fzOyPsdrJCg">Certified specialist of the Russian operating system Linux RedOS</a><i/><br/>
+<button><i>&#8226; <a href="https://img.hhcdn.ru/photo/653575075.jpeg?t=1693971457&h=alYTFO__1l0fzOyPsdrJCg">Certified specialist of the Russian operating system Linux RedOS</a><i/></button><br/>
 
 <h4> <i>At the moment, all my work instructions can be found in the following repositories:</i></h4>
 
-<i>&#8226; <a href="https://github.com/dimoroz772/Domain_connection_between_Linux_and_Windows">Domain_connection_between_Linux_and_Windows</a><br/><i/>
+<button><i>&#8226; <a href="https://github.com/dimoroz772/Domain_connection_between_Linux_and_Windows">Domain_connection_between_Linux_and_Windows</a></button><i/><br/>
 
-<i>&#8226; <a href="https://github.com/dimoroz772/Linux_RedOS">Linux_RedOS</a><br/><i/>
+<button><i>&#8226; <a href="https://github.com/dimoroz772/Linux_RedOS">Linux_RedOS</a></button><i/><br/>
 
-<i>&#8226; <a href="https://github.com/dimoroz772/Linux_CentOS">Linux_CentOS</a><br/><i/>
+<button><i>&#8226; <a href="https://github.com/dimoroz772/Linux_CentOS">Linux_CentOS</a></button><i/><br/>
 
-<i>&#8226; <a href="https://github.com/dimoroz772/Linux_ALT">Linux_ALT</a><br/><i/>
+<button><i>&#8226; <a href="https://github.com/dimoroz772/Linux_ALT">Linux_ALT</a></button><i/><br/>
 
-<i>&#8226; <a href="https://github.com/dimoroz772/Linux_Fedora">Linux_Fedora</a><br/><i/>
+<button><i>&#8226; <a href="https://github.com/dimoroz772/Linux_Fedora">Linux_Fedora</a></button><i/><br/>
 
-<i>&#8226; <a href="https://github.com/dimoroz772/Scripts">Scripts</a><br/><i/>
+<button><i>&#8226; <a href="https://github.com/dimoroz772/Scripts">Scripts</a></button><i/><br/>
 
-<i>&#8226; <a href="https://github.com/dimoroz772/Windows_Upgrade_Or_Install_Keys">Windows_Upgrade_Or_Install_Keys</a><br/><i/>
+<button><i>&#8226; <a href="https://github.com/dimoroz772/Windows_Upgrade_Or_Install_Keys">Windows_Upgrade_Or_Install_Keys</a></button><i/><br/>
 
-<i>&#8226; <a href="https://github.com/dimoroz772/DDT4ALL">DDT4ALL</a><br/><i/>
+<button><i>&#8226; <a href="https://github.com/dimoroz772/DDT4ALL">DDT4ALL</a></button><i/><br/>
 
-<i>&#8226; <a href="https://github.com/dimoroz772/My_ideal_software_IT-environment">My_ideal_software_IT-environment</a><br/><i/>
+<button><i>&#8226; <a href="https://github.com/dimoroz772/My_ideal_software_IT-environment">My_ideal_software_IT-environment</a></button><i/><br/>
  <br/>
 <i>I hope that you will find something new and interesting for yourself in the repositories of my profile) Peaceful sky to all!)<i/>
  <br/>
