--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
 
 <button><i>&#8226; <a href="https://github.com/dimoroz772/Linux_Fedora">Linux_Fedora</a></button><i/><br/>
 
-<button><i>&#8226; <a href="https://github.com/dimoroz772/Scripts">Scripts</a></button><i/><br/>
+<button><i>&#8226; <a href="https://dimoroz772.github.io/DDT4ALL/Scripts">Scripts</a></button><i/><br/>
 
-<button><i>&#8226; <a href="https://github.com/dimoroz772/Windows_Upgrade_Or_Install_Keys">Windows_Upgrade_Or_Install_Keys</a></button><i/><br/>
+<button><i>&#8226; <a href="https://dimoroz772.github.io/DDT4ALL/Windows_Upgrade_Or_Install_Keys">Windows_Upgrade_Or_Install_Keys</a></button><i/><br/>
 
-<button><i>&#8226; <a href="https://github.com/dimoroz772/DDT4ALL">DDT4ALL</a></button><i/><br/>
+<button><i>&#8226; <a href="https://dimoroz772.github.io/DDT4ALL/">DDT4ALL</a></button><i/><br/>
 
 <button><i>&#8226; <a href="https://github.com/dimoroz772/My_ideal_software_IT-environment">My_ideal_software_IT-environment</a></button><i/><br/>
  <br/>
