--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 <button><i>&#8226; <a href="https://github.com/dimoroz772/Linux_Fedora">Linux_Fedora</a></button><i/><br/>
 
-<button><i>&#8226; <a href="https://dimoroz772.github.io/DDT4ALL/Scripts">Scripts</a></button><i/><br/>
+<button><i>&#8226; <a href="https://dimoroz772.github.io/Scripts">Scripts</a></button><i/><br/>
 
 <button><i>&#8226; <a href="https://dimoroz772.github.io/Windows_Upgrade_Or_Install_Keys/">Windows_Upgrade_Or_Install_Keys</a></button><i/><br/>
 
