--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <button><i>&#8226; <a href="https://dimoroz772.github.io/DDT4ALL/">DDT4ALL</a></button><i/><br/>
 
-<button><i>&#8226; <a href="https://github.com/dimoroz772/My_ideal_software_IT-environment">My_ideal_software_IT-environment</a></button><i/><br/>
+<button><i>&#8226; <a href="https://github.com/dimoroz772/My_ideal_software_IT-environment" style="color:#8A2BE2">My_ideal_software_IT-environment</a></button><i/><br/>
  <br/>
 <i>I hope that you will find something new and interesting for yourself in the repositories of my profile) Peaceful sky to all!)<i/>
  <br/>
