--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       transition: 0.5s;
     }
     button:hover {
-      background-color: #00a6ff;
+      background-color: #5cc6ff;
       border: 2px solid #540094;
     }
 </style>
@@ -43,35 +43,35 @@
 
 <h4><i>I am also certified in:</i></h4>
 
-<button><i>&#8226; <a href="https://img.hhcdn.ru/photo/623529866.jpeg?t=1693971457&h=SPNFbmoXDDWKM755IkyIJw">CCNA Security</a><i/></button><br/>
+<button><i>&#8226; <a href="https://img.hhcdn.ru/photo/623529866.jpeg?t=1693971457&h=SPNFbmoXDDWKM755IkyIJw" style="color:#0000FF">CCNA Security</a><i/></button><br/>
 
-<button><i>&#8226; <a href="https://img.hhcdn.ru/photo/623529994.jpeg?t=1693971457&h=SXXZsoWJ_aljwCpyaSf2DA">CCNA Routing and Switching: Routing and Switching Essentials</a><i/></button><br/>
+<button><i>&#8226; <a href="https://img.hhcdn.ru/photo/623529994.jpeg?t=1693971457&h=SXXZsoWJ_aljwCpyaSf2DA" style="color:#0000FF">CCNA Routing and Switching: Routing and Switching Essentials</a><i/></button><br/>
 
-<button><i>&#8226; <a href="https://img.hhcdn.ru/photo/623530162.jpeg?t=1693971457&h=aSd3HFMwMSJkXAVxqp6Rbw">CCNA Routing and Switching: Introduction to Networks</a><i/></button><br/>
+<button><i>&#8226; <a href="https://img.hhcdn.ru/photo/623530162.jpeg?t=1693971457&h=aSd3HFMwMSJkXAVxqp6Rbw" style="color:#0000FF">CCNA Routing and Switching: Introduction to Networks</a><i/></button><br/>
 
-<button><i>&#8226; <a href="https://img.hhcdn.ru/photo/652564360.jpeg?t=1693971457&h=lHzghlv5fuSqKroGncF1ew">I am also an expert in evaluating demonstration exams in Network and System Administration</a><i/></button><br/>
+<button><i>&#8226; <a href="https://img.hhcdn.ru/photo/652564360.jpeg?t=1693971457&h=lHzghlv5fuSqKroGncF1ew" style="color:#0000FF">I am also an expert in evaluating demonstration exams in Network and System Administration</a><i/></button><br/>
 
-<button><i>&#8226; <a href="https://img.hhcdn.ru/photo/653575075.jpeg?t=1693971457&h=alYTFO__1l0fzOyPsdrJCg">Certified specialist of the Russian operating system Linux RedOS</a><i/></button><br/>
+<button><i>&#8226; <a href="https://img.hhcdn.ru/photo/653575075.jpeg?t=1693971457&h=alYTFO__1l0fzOyPsdrJCg" style="color:#0000FF">Certified specialist of the Russian operating system Linux RedOS</a><i/></button><br/>
 
 <h4> <i>At the moment, all my work instructions can be found in the following repositories:</i></h4>
 
-<button><i>&#8226; <a href="https://github.com/dimoroz772/Domain_connection_between_Linux_and_Windows">Domain_connection_between_Linux_and_Windows</a></button><i/><br/>
+<button><i>&#8226; <a href="https://github.com/dimoroz772/Domain_connection_between_Linux_and_Windows" style="color:#0000FF">Domain connection between Linux and Windows</a></button><i/><br/>
 
-<button><i>&#8226; <a href="https://github.com/dimoroz772/Linux_RedOS">Linux_RedOS</a></button><i/><br/>
+<button><i>&#8226; <a href="https://github.com/dimoroz772/Linux_RedOS" style="color:#0000FF">Linux RedOS</a></button><i/><br/>
 
-<button><i>&#8226; <a href="https://github.com/dimoroz772/Linux_CentOS">Linux_CentOS</a></button><i/><br/>
+<button><i>&#8226; <a href="https://github.com/dimoroz772/Linux_CentOS" style="color:#0000FF">Linux CentOS</a></button><i/><br/>
 
-<button><i>&#8226; <a href="https://github.com/dimoroz772/Linux_ALT">Linux_ALT</a></button><i/><br/>
+<button><i>&#8226; <a href="https://github.com/dimoroz772/Linux_ALT" style="color:#0000FF">Linux ALT</a></button><i/><br/>
 
-<button><i>&#8226; <a href="https://dimoroz772.github.io/Linux_Fedora/">Linux_Fedora</a></button><i/><br/>
+<button><i>&#8226; <a href="https://dimoroz772.github.io/Linux_Fedora/" style="color:#0000FF">Linux Fedora</a></button><i/><br/>
 
-<button><i>&#8226; <a href="https://dimoroz772.github.io/Scripts/">Scripts</a></button><i/><br/>
+<button><i>&#8226; <a href="https://dimoroz772.github.io/Scripts/" style="color:#0000FF">Scripts</a></button><i/><br/>
 
-<button><i>&#8226; <a href="https://dimoroz772.github.io/Windows_Upgrade_Or_Install_Keys/">Windows_Upgrade_Or_Install_Keys</a></button><i/><br/>
+<button><i>&#8226; <a href="https://dimoroz772.github.io/Windows_Upgrade_Or_Install_Keys/" style="color:#0000FF">Windows Upgrade Or Install Keys</a></button><i/><br/>
 
-<button><i>&#8226; <a href="https://dimoroz772.github.io/DDT4ALL/">DDT4ALL</a></button><i/><br/>
+<button><i>&#8226; <a href="https://dimoroz772.github.io/DDT4ALL/" style="color:#0000FF">DDT4ALL</a></button><i/><br/>
 
-<button><i>&#8226; <a href="https://github.com/dimoroz772/My_ideal_software_IT-environment" style="color:#8A2BE2">My_ideal_software_IT-environment</a></button><i/><br/>
+<button><i>&#8226; <a href="https://github.com/dimoroz772/My_ideal_software_IT-environment" style="color:#0000FF">My ideal software IT-environment</a></button><i/><br/>
  <br/>
 <i>I hope that you will find something new and interesting for yourself in the repositories of my profile) Peaceful sky to all!)<i/>
  <br/>
