--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
 <head>
-    <title>About Dmitriy Morozov</title>
-    <link rel="shortcut icon" href="./Resum.png" type="image/png">
+  <title>About Dmitriy Morozov</title>
+  <link rel="shortcut icon" href="./Resum.png" type="image/png">
 </head>
 <style>
-  body{
-      background-image: url('fon.jpg');
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-attachment: fixed;
-      max-width: 1000px;
-      margin: 0 auto;
-      padding: 20px;
-      color: #333;
-  }
-  a {
-      text-decoration: none;
-  }
+body{
+    background-image: url('fon.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 20px;
+    color: #333;
+}
+a {
+    text-decoration: none;
+}
 </style>
 <style>
-    button {
-      position: static;
-      width:450px;
-      text-align:left;
-      font-size: 18px;
-      background-color: rgba(28,28,28,0);
-      transition: 0.5s;
-    }
-    button:hover {
-      background-color: #5cc6ff;
-      border: 2px solid #540094;
-    }
+  button {
+    position: static;
+    width:450px;
+    text-align:left;
+    font-size: 18px;
+    background-color: rgba(28,28,28,0);
+    transition: 0.5s;
+  }
+  button:hover {
+    background-color: #5cc6ff;
+    border: 2px solid #540094;
+  }
 </style>
-  
+
 
 
 <h1 align="center"><i>Hi there! My name is Dmitriy)✌️</i></h1>
@@ -43,15 +43,15 @@
 
 <h4><i>I am also certified in:</i></h4>
 
-<button><i>&#8226; <a href="https://img.hhcdn.ru/photo/623529866.jpeg?t=1693971457&h=SPNFbmoXDDWKM755IkyIJw" style="color:#0000FF">CCNA Security</a><i/></button><br/>
+<i>&#8226; <a style="color:#333">CCNA Security</a><i/><br/>
 
-<button><i>&#8226; <a href="https://img.hhcdn.ru/photo/623529994.jpeg?t=1693971457&h=SXXZsoWJ_aljwCpyaSf2DA" style="color:#0000FF">CCNA Routing and Switching: Routing and Switching Essentials</a><i/></button><br/>
+<i>&#8226; <a style="color:#333">CCNA Routing and Switching: Routing and Switching Essentials</a><i/><br/>
 
-<button><i>&#8226; <a href="https://img.hhcdn.ru/photo/623530162.jpeg?t=1693971457&h=aSd3HFMwMSJkXAVxqp6Rbw" style="color:#0000FF">CCNA Routing and Switching: Introduction to Networks</a><i/></button><br/>
+<i>&#8226; <a style="color:#333">CCNA Routing and Switching: Introduction to Networks</a><i/><br/>
 
-<button><i>&#8226; <a href="https://img.hhcdn.ru/photo/652564360.jpeg?t=1693971457&h=lHzghlv5fuSqKroGncF1ew" style="color:#0000FF">I am also an expert in evaluating demonstration exams in Network and System Administration</a><i/></button><br/>
+<i>&#8226; <a style="color:#333">I am also an expert in evaluating demonstration exams in Network and System Administration</a><i/><br/>
 
-<button><i>&#8226; <a href="https://img.hhcdn.ru/photo/653575075.jpeg?t=1693971457&h=alYTFO__1l0fzOyPsdrJCg" style="color:#0000FF">Certified specialist of the Russian operating system Linux RedOS</a><i/></button><br/>
+<i>&#8226; <a style="color:#333">Certified specialist of the Russian operating system Linux RedOS</a><i/><br/>
 
 <h4> <i>At the moment, all my work instructions can be found in the following repositories:</i></h4>
 
@@ -72,17 +72,17 @@
 <button><i>&#8226; <a href="https://dimoroz772.github.io/DDT4ALL/" style="color:#0000FF">DDT4ALL</a></button><i/><br/>
 
 <button><i>&#8226; <a href="https://github.com/dimoroz772/My_ideal_software_IT-environment" style="color:#0000FF">My ideal software IT-environment</a></button><i/><br/>
- <br/>
+<br/>
 <i>I hope that you will find something new and interesting for yourself in the repositories of my profile) Peaceful sky to all!)<i/>
- <br/>
- <br/>
+<br/>
+<br/>
 
 <p align="center">
 <a href="https://git.io/streak-stats"><img src="https://streak-stats.demolab.com?user=dimoroz772&theme=tokyonight-duo&hide_border=true"/></a>
 </p>
 
- <br/>
- <br/>
+<br/>
+<br/>
 
 <p align="left">
 <a href="https://git.io/streak-stats"><img src="https://komarev.com/ghpvc/?username=dimoroz772&color=blueviolet"/></a>
