--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ a {
 
 <button><i>&#8226; <a href="https://github.com/dimoroz772/Linux_RedOS" style="color:#0000FF">Linux RedOS</a></button><i/><br/>
 
-<button><i>&#8226; <a href="https://github.com/dimoroz772/Linux_CentOS" style="color:#0000FF">Linux CentOS</a></button><i/><br/>
+<button><i>&#8226; <a href="https://dimoroz772.github.io/Linux_CentOS/" style="color:#0000FF">Linux CentOS</a></button><i/><br/>
 
 <button><i>&#8226; <a href="https://dimoroz772.github.io/Linux_ALT/" style="color:#0000FF">Linux ALT</a></button><i/><br/>
 
