--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ a {
 
 <button><i>&#8226; <a href="https://github.com/dimoroz772/Domain_connection_between_Linux_and_Windows" style="color:#0000FF">Domain connection between Linux and Windows</a></button><i/><br/>
 
-<button><i>&#8226; <a href="https://github.com/dimoroz772/Linux_RedOS" style="color:#0000FF">Linux RedOS</a></button><i/><br/>
+<button><i>&#8226; <a href="https://dimoroz772.github.io/Linux_RedOS" style="color:#0000FF">Linux RedOS</a></button><i/><br/>
 
 <button><i>&#8226; <a href="https://dimoroz772.github.io/Linux_CentOS/" style="color:#0000FF">Linux CentOS</a></button><i/><br/>
 
