--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>About Dmitriy Morozov</title>
+  <link rel="shortcut icon" href="./Resum.png" type="image/png">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 
