--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@ button:hover::after {
 </head>
 <body>
 
-<button class="tablink" onclick="openPage('GI', this, 'transparent')" id="defaultOpen"><i>General information</i></button>
-<button class="tablink" onclick="openPage('Repositories', this, 'transparent')"><i>Repositories</i></button>
+<button class="tablink" onclick="openPage('GI', this, 'transparent')"><i>General information</i></button>
+<button class="tablink" onclick="openPage('Repositories', this, 'transparent')" id="defaultOpen"><i>Repositories</i></button>
 
 <div id="GI" class="tabcontent">
   <h1 align="center"><i>Hi there! My name is Dmitriy)✌️</i></h1>
