--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <div class="work--lockup">
                 <ul class="slider">
                   <li class="slider--item slider--item-left">
-                    <a href="https://github.com/dimoroz772/Linux_CentOS/blob/Website/rsyslog%2BLogAnalyzer%2BMySQL">
+                    <a href="https://dimoroz772.github.io/Linux_CentOS/Web_rsyslog+LogAnalyzer+MySQL.html">
                       <div class="slider--item-image">
                         <img src="assets/img/Adiscon_LogAnalyzer.jpg">
                       </div>
