--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </a>
                   </li>
                   <li class="slider--item slider--item-center">
-                    <a href="https://github.com/dimoroz772/Linux_CentOS/blob/Website/Docker_Engine%2BPortainer">
+                    <a href="https://dimoroz772.github.io/Linux_CentOS/Web_Docker_Engine+Portainer.html">
                       <div class="slider--item-image">
                         <img src="assets/img/Docker.jpg">
                       </div>
